@@ -54,6 +54,8 @@
 #include "JSOESTextureHalfFloat.cpp"
 #include "JSOESTextureHalfFloatLinear.cpp"
 #include "JSOESVertexArrayObject.cpp"
+#include "JSWebGL1RenderingContext.cpp"
+#include "JSWebGL2RenderingContext.cpp"
 #include "JSWebGLActiveInfo.cpp"
 #include "JSWebGLBuffer.cpp"
 #include "JSWebGLCompressedTextureATC.cpp"
@@ -69,7 +71,7 @@
 #include "JSWebGLLoseContext.cpp"
 #include "JSWebGLProgram.cpp"
 #include "JSWebGLRenderbuffer.cpp"
-#include "JSWebGLRenderingContext.cpp"
+#include "JSWebGLRenderingContextBase.cpp"
 #include "JSWebGLShader.cpp"
 #include "JSWebGLShaderPrecisionFormat.cpp"
 #include "JSWebGLTexture.cpp"
