@@ -1383,9 +1383,6 @@
     <ClCompile Include="..\platform\graphics\RoundedRect.cpp">
       <Filter>platform\graphics</Filter>
     </ClCompile>
-    <ClCompile Include="..\platform\graphics\SegmentedFontData.cpp">
-      <Filter>platform\graphics</Filter>
-    </ClCompile>
     <ClCompile Include="..\platform\graphics\ShadowBlur.cpp">
       <Filter>platform\graphics</Filter>
     </ClCompile>
@@ -4851,9 +4848,6 @@
     <ClCompile Include="..\platform\graphics\FontCache.cpp">
       <Filter>platform\graphics</Filter>
     </ClCompile>
-    <ClCompile Include="..\platform\graphics\FontData.cpp">
-      <Filter>platform\graphics</Filter>
-    </ClCompile>
     <ClCompile Include="..\platform\graphics\FontDescription.cpp">
       <Filter>platform\graphics</Filter>
     </ClCompile>
@@ -6379,9 +6373,6 @@
     <ClCompile Include="$(ConfigurationBuildDir)\obj$(PlatformArchitecture)\WebCore\DerivedSources\JSWebGLRenderbuffer.cpp">
       <Filter>DerivedSources</Filter>
     </ClCompile>
-    <ClCompile Include="$(ConfigurationBuildDir)\obj$(PlatformArchitecture)\WebCore\DerivedSources\JSWebGLRenderingContext.cpp">
-      <Filter>DerivedSources</Filter>
-    </ClCompile>
     <ClCompile Include="$(ConfigurationBuildDir)\obj$(PlatformArchitecture)\WebCore\DerivedSources\JSWebGLShader.cpp">
       <Filter>DerivedSources</Filter>
     </ClCompile>
@@ -6487,9 +6478,6 @@
     <ClCompile Include="..\html\canvas\WebGLRenderbuffer.cpp">
       <Filter>html\canvas</Filter>
     </ClCompile>
-    <ClCompile Include="..\html\canvas\WebGLRenderingContext.cpp">
-      <Filter>html\canvas</Filter>
-    </ClCompile>
     <ClCompile Include="..\html\canvas\WebGLShader.cpp">
       <Filter>html\canvas</Filter>
     </ClCompile>
@@ -6582,9 +6570,6 @@
     </ClCompile>
     <ClCompile Include="..\platform\graphics\cg\GraphicsContext3DCG.cpp">
       <Filter>platform\graphics\cg</Filter>
-    </ClCompile>
-    <ClCompile Include="..\bindings\js\JSWebGLRenderingContextCustom.cpp">
-      <Filter>bindings\js</Filter>
     </ClCompile>
     <ClCompile Include="..\platform\graphics\cairo\GraphicsContext3DCairo.cpp">
       <Filter>platform\graphics\cairo</Filter>
@@ -7149,6 +7134,34 @@
     </ClCompile>
     <ClCompile Include="..\html\canvas\EXTBlendMinMax.cpp">
       <Filter>html\canvas</Filter>
+    </ClCompile>
+    <ClCompile Include="..\platform\graphics\FontRanges.cpp" />
+    <ClCompile Include="..\html\canvas\WebGL1RenderingContext.cpp">
+      <Filter>html\canvas</Filter>
+    </ClCompile>
+    <ClCompile Include="..\html\canvas\WebGL2RenderingContext.cpp">
+      <Filter>html\canvas</Filter>
+    </ClCompile>
+    <ClCompile Include="..\html\canvas\WebGLRenderingContextBase.cpp">
+      <Filter>html\canvas</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\WebKitBuild\Release\obj64\WebCore\DerivedSources\JSWebGL1RenderingContext.cpp">
+      <Filter>DerivedSources</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\WebKitBuild\Release\obj64\WebCore\DerivedSources\JSWebGL2RenderingContext.cpp">
+      <Filter>DerivedSources</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\WebKitBuild\Release\obj64\WebCore\DerivedSources\JSWebGLRenderingContextBase.cpp">
+      <Filter>DerivedSources</Filter>
+    </ClCompile>
+    <ClCompile Include="..\bindings\js\JSWebGL1RenderingContextCustom.cpp">
+      <Filter>bindings\js</Filter>
+    </ClCompile>
+    <ClCompile Include="..\bindings\js\JSWebGL2RenderingContextCustom.cpp">
+      <Filter>bindings\js</Filter>
+    </ClCompile>
+    <ClCompile Include="..\bindings\js\JSWebGLRenderingContextBaseCustom.cpp">
+      <Filter>bindings\js</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -8413,9 +8426,6 @@
       <Filter>platform\graphics</Filter>
     </ClInclude>
     <ClInclude Include="..\platform\graphics\RoundedRect.h">
-      <Filter>platform\graphics</Filter>
-    </ClInclude>
-    <ClInclude Include="..\platform\graphics\SegmentedFontData.h">
       <Filter>platform\graphics</Filter>
     </ClInclude>
     <ClInclude Include="..\platform\graphics\ShadowBlur.h">
@@ -12709,9 +12719,6 @@
     <ClInclude Include="..\platform\graphics\FontCache.h">
       <Filter>platform\graphics</Filter>
     </ClInclude>
-    <ClInclude Include="..\platform\graphics\FontData.h">
-      <Filter>platform\graphics</Filter>
-    </ClInclude>
     <ClInclude Include="..\platform\graphics\FontDescription.h">
       <Filter>platform\graphics</Filter>
     </ClInclude>
@@ -14216,9 +14223,6 @@
     <ClInclude Include="$(ConfigurationBuildDir)\obj$(PlatformArchitecture)\WebCore\DerivedSources\JSWebGLRenderbuffer.h">
       <Filter>DerivedSources</Filter>
     </ClInclude>
-    <ClInclude Include="$(ConfigurationBuildDir)\obj$(PlatformArchitecture)\WebCore\DerivedSources\JSWebGLRenderingContext.h">
-      <Filter>DerivedSources</Filter>
-    </ClInclude>
     <ClInclude Include="$(ConfigurationBuildDir)\obj$(PlatformArchitecture)\WebCore\DerivedSources\JSWebGLShader.h">
       <Filter>DerivedSources</Filter>
     </ClInclude>
@@ -14325,9 +14329,6 @@
       <Filter>html\canvas</Filter>
     </ClInclude>
     <ClInclude Include="..\html\canvas\WebGLRenderbuffer.h">
-      <Filter>html\canvas</Filter>
-    </ClInclude>
-    <ClInclude Include="..\html\canvas\WebGLRenderingContext.h">
       <Filter>html\canvas</Filter>
     </ClInclude>
     <ClInclude Include="..\html\canvas\WebGLShader.h">
@@ -15053,6 +15054,25 @@
     <ClInclude Include="..\Modules\webdatabase\DatabaseBackendSync.h" />
     <ClInclude Include="..\Modules\webdatabase\SQLStatementSync.h" />
     <ClInclude Include="..\Modules\webdatabase\SQLTransactionBackendSync.h" />
+    <ClInclude Include="..\platform\graphics\FontRanges.h" />
+    <ClInclude Include="..\html\canvas\WebGL1RenderingContext.h">
+      <Filter>html\canvas</Filter>
+    </ClInclude>
+    <ClInclude Include="..\html\canvas\WebGL2RenderingContext.h">
+      <Filter>html\canvas</Filter>
+    </ClInclude>
+    <ClInclude Include="..\html\canvas\WebGLRenderingContextBase.h">
+      <Filter>html\canvas</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\WebKitBuild\Release\obj64\WebCore\DerivedSources\JSWebGL1RenderingContext.h">
+      <Filter>DerivedSources</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\WebKitBuild\Release\obj64\WebCore\DerivedSources\JSWebGL2RenderingContext.h">
+      <Filter>DerivedSources</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\..\WebKitBuild\Release\obj64\WebCore\DerivedSources\JSWebGLRenderingContextBase.h">
+      <Filter>DerivedSources</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\css\CSSGrammar.y.in">
