@@ -131,6 +131,9 @@
 #include "JSTreeWalkerCustom.cpp"
 #include "JSVideoTrackCustom.cpp"
 #include "JSVideoTrackListCustom.cpp"
+#include "JSWebGL1RenderingContextCustom.cpp"
+#include "JSWebGL2RenderingContextCustom.cpp"
+#include "JSWebGLRenderingContextBaseCustom.cpp"
 #include "JSWebKitPointCustom.cpp"
 #include "JSWorkerCustom.cpp"
 #include "JSWorkerGlobalScopeBase.cpp"
